# dddantic

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RULES.md  pyproject.toml
.github/workflows/: ci.yml  diagram.yml
examples/: README.md  guardrails.py
examples/shop/: catalog.py  diagram.md  diagram.py  domain.py  fulfillment.py  ordering.py  render.py  shared.py
scripts/: gen_rules.py
src/dddantic/: __init__.py  _compat.py  rules.py
src/dddantic/building_blocks/: __init__.py  _behavior.py  _checks.py  _introspect.py  _kinds.py  _meta.py  aggregate.py  context.py  entity.py  event.py  factory.py  repository.py  service.py  specification.py  value_object.py
src/dddantic/diagram/: __init__.py  context_map.py  mermaid.py
src/dddantic/registry/: __init__.py  registry.py
tests/: conftest.py  test_aggregate.py  test_compat.py  test_context.py  test_context_inference.py  test_context_map.py  test_diagram.py  test_diagram_behavior.py  test_diagram_grouped.py  test_entity.py  test_event.py  test_guardrails_example.py  test_introspect.py  test_registry.py  test_repository.py  test_rules_conformance.py  test_service_factory.py  test_specification.py  test_value_object.py
